Manage account now working

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -44,7 +44,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/orders">Orders</a>
                         <a class="dropdown-item" href="/manageaccount">Manage Account</a>
-                        <a class="dropdown-item" href="/payments">Manage Payment Methods</a>
+                        
                         <a class="dropdown-item active" href="/cart">Cart</a>
                     </div>
                 </li>
@@ -88,7 +88,7 @@
             <div class="col-8" style="text-align: right;position:relative">
                 <div th:text="'Subtotal: $' + ${#numbers.formatDecimal(ordermodel.subtotal, 0, 'COMMA', 2, 'POINT')}"></div>
                 <div th:text="'Total(8% tax + $5.95 shipping): $' + ${#numbers.formatDecimal(ordermodel.finalTotal, 0, 'COMMA', 2, 'POINT')}"></div>
-                <a th:if="${!items.empty}" th:href="@{/cart/checkout}">
+                <a th:if="${!items.empty}" th:href="@{/payment}">
                     <button style="right:0;position:absolute; margin-top:10px;" class="btn btn-lg btn-dark btn-block" type="submit">Checkout</button>
                 </a>
             </div>
