Readded manage payment methods link.

--- a/src/main/resources/templates/manageaccount.html
+++ b/src/main/resources/templates/manageaccount.html
@@ -43,7 +43,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/orders">Orders</a>
                         <a class="dropdown-item active" href="/manageaccount">Manage Account</a>
-                        
+                        <a class="dropdown-item" href="/payments">Manage Payment Methods</a>
                         <a class="dropdown-item" href="/cart">Cart</a>
                     </div>
                 </li>
