Lots of changes and fixes. Added employee login, employee add/remove item, and Complete order checkout

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -7,7 +7,8 @@
 	display:inline-block;
 	border:1px solid gray;
 	vertical-align:top;
-	position:relative
+	position:relative;
+	margin-bottom: 5px;
 }
 .listItem:hover {
 	background-color: #cccccc;
