--- a/src/main/resources/templates/ordersuccess.html
+++ b/src/main/resources/templates/ordersuccess.html
@@ -55,7 +55,7 @@
         </div>
     </nav>
 
-    <h2 style="text-align:center; margin-top:30px;">Saved!</h2>
+    <h2 style="text-align:center; margin-top:30px;">Shipped!</h2>
 </body>
 
 </html>
