--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -64,7 +64,7 @@
             <div class="col-3">
                 <div class="card">
                     <h3 class="card-header">Recent Orders</h3>
-                    <th:block th:each="order: ${orders}">
+                    <th:block th:each="order: ${orders}" th:if="${order.isActive} == 0">
 	                    <div class="card-block" style="padding:10px;border-bottom: 1px solid gray; background: #fbfbfb;">
 	                        <div>
 	                        <b>
