--- a/src/main/resources/templates/payments.html
+++ b/src/main/resources/templates/payments.html
@@ -62,12 +62,12 @@
                 <div class="card">
                     <h3 class="card-header">Add Payment + Shipping</h3>
                     <div class="card-block">
-                        <form class="py-3" data-th-action="@{payments/confirm}" data-th-object="${paymentform}" method="post">
+                        <form class="py-3" data-th-action="@{payments/checkout}" data-th-object="${paymentform}" method="post">
                             <!-- Payment Type Dropdown -->
                             <div class="form-group">
                                 <div class="row">
                                     <label for="inputPaymentType" class="col-4 col-form-label">Payment Type</label>
-                                    <select class="custom-select" id="inputPaymentType">
+                                    <select th:field="*{type}" class="custom-select" id="inputPaymentType">
                                         <option value="Visa" selected>Visa</option>
                                         <option value="MasterCard">MasterCard</option>
                                         <option value="American Express">American Express</option>
@@ -79,21 +79,32 @@
                             <div class="form-group">
                                 <div class="row">
                                     <label for="inputAccountNumber" class="col-4 col-form-label">Card Number</label>
-                                    <input type="text" id="inputAccountNumber" class="col-6 form-control" placeholder="Account Number">
+                                    <input th:field="*{cardNumber}" type="text" id="inputAccountNumber" class="col-6 form-control" placeholder="Account Number">
                                 </div>
                             </div>
                             <!-- Payment Expiration Date Input -->
                             <div class="form-group">
                                 <div class="row">
                                     <label for="inputExpirationDate" class="col-4 col-form-label">Expiration Date</label>
-                                    <input type="text" id="inputExpirationDate" class="col-6 form-control">
+                                    <input th:field="*{cardExp}" type="text" id="inputExpirationDate" class="col-6 form-control">
                                 </div>
                             </div>
+                            
+                            <h3>Mail Address:</h3>
+                            <div class="form-group">
+                                <div class="row">
+                                    <label for="inputExpirationDate" class="col-4 col-form-label">Address</label>
+                                    <input th:field="*{address}" type="text" id="inputMailAddress" class="col-6 form-control">
+                                </div>
+                            </div>
+                            
+                            <div th:text="'Subtotal: $' + ${#numbers.formatDecimal(ordermodel.subtotal, 0, 'COMMA', 2, 'POINT')}"></div>
+               				<div style="padding-bottom:20px;"th:text="'Total(8% tax + $5.95 shipping): $' + ${#numbers.formatDecimal(ordermodel.finalTotal, 0, 'COMMA', 2, 'POINT')}"></div>
+                
                             <!-- Add Payment Button -->
                             <div class="form-group w-50 mx-auto">
-                                <button class="btn btn-lg btn-dark btn-block" type="submit">Add Payment Method</button>
+                                <button class="btn btn-lg btn-dark btn-block" type="submit">Checkout</button>
                             </div>
-                            <h2>Mail Address:</h2>
                         </form>
                     </div>
                 </div>
