--- a/src/main/resources/templates/itemdetails.html
+++ b/src/main/resources/templates/itemdetails.html
@@ -52,10 +52,6 @@
                     <a class="nav-link" href="/signin/action/signout">Sign Out</a>
                 </li>
             </ul>
-            <!-- <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>-->
         </div>
     </nav>
 
@@ -80,7 +76,20 @@
                     </div>
                 </div>
                 <div class="card">
-                    <h3 class="card-header"style="position:relative">User Reviews <button style="margin-top:15px; margin-bottom:30px; width:150px;right:10px; top:-10px;position:absolute;" class="btn btn-lg btn-dark btn-block" type="submit">Add Review</button></h3>
+                    <h3 class="card-header"style="position:relative">User Reviews 
+                    	<button onclick="toggleReviewBox()"
+                    		style="margin-top:15px; margin-bottom:30px; width:150px;right:10px; top:-10px;position:absolute;" 
+                    		class="btn btn-lg btn-dark btn-block" type="submit">Add Review</button>
+                    </h3>
+                    <form data-th-action="@{/browse/itemdetails/{productId}/addreview(productId=${item.itemId})}">
+                    	<div id="reviewbox" class="card-block" style="display:none;padding:10px;border-bottom: 1px solid gray; background: #fbfbfb;">
+                    		<input name="reviewdetails" style="width:100%;" type="text" id="inputPassword" class="form-control" placeholder="Review Description..."
+                                    required="">
+                            <button style="margin-top:15px; margin-bottom:30px; width:200px;" 
+                            class="btn btn-lg btn-dark btn-block" type="submit">Add New Review</button>
+                                    
+                   		</div>
+                    </form>
                     <h4 th:if="${reviews.empty}" class="card-title" style="padding:10px;">No Reviews Yet</h4>
                     <th:block th:each="review: ${reviews}">
 		              <div class="card-block" style="padding:10px;border-bottom: 1px solid gray; background: #fbfbfb;">
@@ -110,5 +119,16 @@
     </div>
 
 </body>
+
+<script>
+function toggleReviewBox(){
+	var x = document.getElementById("reviewbox");
+    if (x.style.display === "none") {
+        x.style.display = "block";
+    } else {
+        x.style.display = "none";
+    }
+}
+</script>
 
 </html>
